--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.3"
+    "@astrojs/tailwind": "^6.0.2",
+    "@fontsource-variable/onest": "^5.1.0",
+    "@fontsource/forum": "^5.2.5",
+    "astro": "^5.9.2",
+    "framer-motion": "^11.14.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^1.1.2"
   }
 }
