--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@fontsource/forum": "^5.2.5",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.9.2",
     "tailwindcss": "^3.4.16"
   },
